# SPDX-FileCopyrightText: 2021 Comcast Cable Communications Management, LLC
# SPDX-License-Identifier: Apache-2.0

project('jansson', 'c',
        version: '0.0.1',
        meson_version: '>=0.54.0',
        license: ['Apache-2.0'],
        default_options: ['c_std=c18'])

libjansson_dep = declare_dependency(include_directories: ['src/'])
