# SPDX-FileCopyrightText: 2021 Comcast Cable Communications Management, LLC
# SPDX-License-Identifier: Apache-2.0

headers = files('rbus_filter.h',
                'rbus.h',
                'rbus_message.h',
                'rbus_object.h',
                'rbus_property.h',
                'rbus_value.h')
